crates/ridge-parser/tests/fixtures/errors/p002_newline_in_expr.ridge
-- expect: P002
-- Trigger: trailing operator `+` with no right-hand side (causes P002 on NEWLINE).
fn f = 1 +
